<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutAR"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <Button
        android:id="@+id/btnSuivant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="@dimen/alphaAR"
        android:background="@android:drawable/btn_default"
        android:text="@string/suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="@dimen/alphaAR"
        android:background="@android:drawable/btn_default"
        android:text="@string/information_tableau"
        app:layout_constraintBottom_toBottomOf="@+id/btnPrecedent"
        app:layout_constraintEnd_toStartOf="@+id/btnSuivant"
        app:layout_constraintStart_toEndOf="@+id/btnPrecedent" />

    <Button
        android:id="@+id/btnPrecedent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="@dimen/alphaAR"
        android:background="@android:drawable/btn_default"
        android:text="@string/precedent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="@dimen/alphaAR"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="12dp"
        android:text="@string/question"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/preview" />


</androidx.constraintlayout.widget.ConstraintLayout>
